Add product content

--- a/storefront-site/html/products/product10.html
+++ b/storefront-site/html/products/product10.html
@@ -69,17 +69,17 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$24.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>It is an easy way for the professional groomer to disinfect comb, brushes, shears, and more</li>
+                            <li>Kills ringworm, HIV virus, staph, bacteria, and other pathogens</li>
+                            <li>Barbicide disinfectant contains a powerful rust inhibitor</li>
+                            <li>Concentrated liquid, 4 ounce makes one gallon of clear blue solution, a 64 ounce bottle makes 16 gallons</li>
+                            <li>Metals can be immersed for hours without rusting, but should be oiled afterward; measures 10-1/2-inch length by 4-1/2-inch width by 4-1/2-inch height</li>
                         </ul>
                     </div>
                 </p>
