--- a/storefront-site/html/products/product11.html
+++ b/storefront-site/html/products/product11.html
@@ -69,17 +69,16 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$11.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Each Aquatab is 49mg with 16.88% Sodium Dichloroisocyanurate creating 2.6ppm available chlorine. When dissolved in 2 quarts of water the easy to use tablets disinfect the water for safe drinking in as little as 30 minutes. For water that requires filtering and removal of dirt particles, such as water from a stream or river, use 1 tablet for every 0.75 liters of filtered water.</li>
+                            <li>Protect you and your family during outdoor activities, natural disasters and emergency situations where boiling water is not an option. Be sure to read instructions before use.</li>
+                            <li>Aquatabs are conveniently packaged to retain freshness and start with a 5 Year Shelf Life. Each Strip of Aquatabs contains 10 individually sealed tablets.</li>
+                            <li>Tablets are so small that they easily fit into any pocket, pouch, purse, bag, backpack, drawer, emergency preparedness kit, disaster relief pack and more.</li>
                         </ul>
                     </div>
                 </p>
