--- a/storefront-site/html/products/product12.html
+++ b/storefront-site/html/products/product12.html
@@ -69,17 +69,15 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$3.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>SAFE AND ECO-FRIENDLY: Using the most innovative industrial grade construction technique, these glow sticks are waterproof, non-flammable and have a non-toxic chemistry. This means they guarantee a long lasting and environmentally friendly option for lighting up your party.</li>
+                            <li>PREMIUM QUALITY: These Ultra Bright Glow Sticks are made from industrial grade construction which uses a perfect blend of premium materials to provide you Non-Toxic, waterproof and CPSIA Compliant party glow sticks that assures a lasting use of up to 12 hours, more fun and 100% safety.</li>
+                            <li>OUR QUALITY PROMISE: We have made these glow sticks from premium materials using industrial grade construction to provide you a distinctive party supply that lights up your special event with safety in mind. So, we are sure you will love the effect this sticks will have on your party.</li>
                         </ul>
                     </div>
                 </p>
