--- a/storefront-site/html/products/product13.html
+++ b/storefront-site/html/products/product13.html
@@ -69,17 +69,17 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$21.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Tasty and easy to take alternative to pills</li>
+                            <li>Delicious natural flavors. Supports bone health</li>
+                            <li>Contains no gluten (wheat), milk, eggs, peanuts, or soy</li>
+                            <li>Just two per day provides multivitamins and minerals you may need</li>
+                            <li>Multi-vitamin and mineral formula in naturallly flavored gummies with up to 75 servings per bottle</li>
                         </ul>
                     </div>
                 </p>
