--- a/storefront-site/html/products/product14.html
+++ b/storefront-site/html/products/product14.html
@@ -59,7 +59,7 @@
                     <span style="font-size: 1.2em;">Tylenol Extra Strength</span>
                     <br>
                     <br>
-                    <p class="stars">Rating: ★★★★☆</p>
+                    <p class="stars">Rating: ★★★★★</p>
                     <p class="stock"><b>In Stock</b></p>
                     <label for="product-quantity">Qty: </label>
                     <select class="quantity" id="product-quantity" name="product-quantity">
@@ -69,17 +69,17 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$9.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Tylenol Extra Strength Caplets with 500mg of acetaminophen to provide temporary relief of minor aches and pains and help reduce fever</li>
+                            <li>Each extra strength caplet contains 500 mg of acetaminophen for effective, lasting pain relief, and has an excellent safety profile when used as directed</li>
+                            <li>Use as a fever reducer and to help provide relief of common pain symptoms including headache, backache, toothache, menstrual cramps and pain caused by the common cold</li>
+                            <li>This extra strength acetaminophen pain reliever can be used by adults and children who are 12 years and older</li>
+                            <li>From the #1 doctor recommended brand for pain relief and fever reduction, experience relief from minor aches and pains with Tylenol</li>
                         </ul>
                     </div>
                 </p>
