--- a/storefront-site/html/products/product15.html
+++ b/storefront-site/html/products/product15.html
@@ -69,17 +69,17 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$6.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Relieve Pain And Reduce Fever: Whether you have occasional muscle aches, backaches, minor arthritis pain, or other aches and pains, Advil stops pain at the site of inflammation so you can get relief where you need it</li>
+                            <li>Pain Relief: Advil Coated Tablets contain 200mg of Ibuprofen; Tough headache, minor arthritis, menstrual cramps, backache, and other pains don’t stand a chance against Advil</li>
+                            <li>Unbeatable Strength: Millions of people choose Advil as their medicine for powerful pain relief; Use as a fever reducer and to help alleviate common pain symptoms including headache, backache, toothache and pain caused by the common cold</li>
+                            <li>Safe Pain Relief: For over 35 years, millions of people choose Advil to deliver powerful pain relief from many kinds of acute pain including headache, backache and joint and minor arthritis pain</li>
+                            <li>Number 1 Ibuprofen Brand: Advil delivers unbeatable strength of tough pain; Add Advil to your cart today and get power over pain; This oral pain reliever can be used by adults and children who are 12 years and older</li>
                         </ul>
                     </div>
                 </p>
