--- a/storefront-site/html/products/product16.html
+++ b/storefront-site/html/products/product16.html
@@ -56,7 +56,7 @@
             </div>
             <div class="grid-item">
                 <h3>
-                    <span style="font-size: 1.2em;">Digital Thermometer</span>
+                    <span style="font-size: 1.2em;">Forehead Thermometer</span>
                     <br>
                     <br>
                     <p class="stars">Rating: ★★★★☆</p>
@@ -75,11 +75,11 @@
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Accurate and fast: This Infrared forehead thermometer is equipped with exceptional microchip and a sensitivity sensor. Infrared senor can precisely detecting the infrared heat given off by the forehead and quickly measuring to get the reading in 1 second</li>
+                            <li>Engineered technology: The non contact infrared body thermometer is design to minimize the errors in the software program by following sound and light enginnering design processes, risk analysis and soft ware validation</li>
+                            <li>No touch forehead 1-5cm: The measuring distance between the thermometer and the forehead must be 1-5 cm. Non-contact thermometer is more convenient than standard thermometer and touch thermometer</li>
+                            <li>50 readings memory storages: Our thermometer can memory 50 readings to continusly track your family member's tempreature. Which can handle it in advance if your family members' temperature is slightly high</li>
+                            <li>Multiple measurement modes: Thermometers can not only measure body temperature, but also measure the temperature of objects. It is suitable for all ages. Press and hold the set button for 3 seconds, then press the "memo" or the "mode" to switch ℃ and ℉</li>
                         </ul>
                     </div>
                 </p>
