--- a/storefront-site/html/products/product3.html
+++ b/storefront-site/html/products/product3.html
@@ -69,17 +69,17 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$26.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li>Suitable for Offices, Schools, Outdoors.</li>
-                            <li>It is made of 3 ply layers and premium non woven fabric, blocking and filtering small particles in the air.</li>
-                            <li>This face mask is designed with an adjustable elastic ear loop.</li>
-                            <li>Breathable, soft and comfortable, gentle to skin.</li>
-                            <li>Disposable masks: 50pc face masks.</li>
+                            <li>The ideal solution for individuals sensitive to natural rubber latex and donning powder.</li>
+                            <li>Comfortable fit with textured fingertips for excellent tactile sensitivity.</li>
+                            <li>Extraordinary strength, stretchable durability and puncture resistance with premium iris blue color.</li>
+                            <li>Commonly used by law enforcement professionals, tattoo artists, physicians and first responders.</li>
+                            <li>Features smooth external finish and beaded cuff for extra durability.</li>
                         </ul>
                     </div>
                 </p>
