--- a/storefront-site/html/products/product4.html
+++ b/storefront-site/html/products/product4.html
@@ -69,17 +69,17 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$11.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li>Suitable for Offices, Schools, Outdoors.</li>
-                            <li>It is made of 3 ply layers and premium non woven fabric, blocking and filtering small particles in the air.</li>
-                            <li>This face mask is designed with an adjustable elastic ear loop.</li>
-                            <li>Breathable, soft and comfortable, gentle to skin.</li>
-                            <li>Disposable masks: 50pc face masks.</li>
+                            <li>Clorox Disinfecting Wipes are proven to kill COVID-19 Virus in 30 seconds; cleans and kills 99.9% of viruses and bacteria with powerful, triple-layered wipe.</li>
+                            <li>New easy to pull flip top pack allows for the easiest way to clean and disinfect: open with 1 hand dispenses 1 wipe at a time.</li>
+                            <li>Germs and messes occur on more than kitchen counters and bathroom surfaces, conveniently tackle any tough surface including finished wood sealed granite and stainless steel.</li>
+                            <li>Easy to stack space saving pack allows you to take Clorox Disinfecting wipes anywhere including on the go.</li>
+                            <li>Disinfect and deodorize with the fresh smell of Clorox disinfecting wipes for a bleach-free, all-in-1 cleaning alternative. Safely wipe down toys, remotes, or clean up car spills with these sanitizing wipes.</li>
                         </ul>
                     </div>
                 </p>
