--- a/storefront-site/html/products/product5.html
+++ b/storefront-site/html/products/product5.html
@@ -69,17 +69,15 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$9.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Made with pure and purposeful ingredients.</li>
+                            <li>Is perfect for your family. Great for hands, face and body.</li>
+                            <li>Free of Sulfates, parabens, heavy perfumes and dyes.</li>
                         </ul>
                     </div>
                 </p>
