--- a/storefront-site/html/products/product7.html
+++ b/storefront-site/html/products/product7.html
@@ -69,17 +69,17 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$11.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Efficient and Effective: Our white gauze wrap rolls have been designed to secure the wound dressings effectively in place, efficiently reducing the risk of infections. The Stretch formula ensures gentle pressure over the wound while providing adequate breathability for its fast-paced recovery.</li>
+                            <li>Hospital Gauze Grade: The roller gauze has been developed with latex-free raw materials. The high-grade polyester-cotton rolls medically have been proven to be lint-free which prevents cotton fiber strands from sticking to the wound and ensures a pain-free removal experience to the user.</li>
+                            <li>Low-Cost: These non-sterile gauze bandage rolls have been manufactured in a clean and sanitary environment. They are packaged individually to maintain utter hygiene, absolutely diminishing the need for expensive and high-cost sterile gauze rolls.</li>
+                            <li>User-Friendly: Using our medical gauze rolls, one can timely provide first aid to oneself or their loved ones from the convenience of home, since they are highly elastic and conform easily to the affected body parts. For more information, please refer to the backside of the box.</li>
+                            <li>Multi-Functional: From wound care to being used as a bandage for burns' dressing, our rolled gauze 4 inches offers versatile functionality. They can also be used as either mummy wraps or mummy bandages for your last-minute Halloween costume call, so enjoy your parties with easy mobility using our fine gauze.</li>
                         </ul>
                     </div>
                 </p>
