--- a/storefront-site/html/products/product8.html
+++ b/storefront-site/html/products/product8.html
@@ -69,17 +69,17 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$7.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Polyvinyl Chloride frame</li>
+                            <li>Polycarbonate lens</li>
+                            <li>Anti Fog Lens : The essential goods safety lab glasses are made of clear, highly transparent, wear-resistant PC material. Transparent lenses with anti-fog coating technology can protect the eyes of adults and maintain a clear field of vision from the external environment.</li>
+                            <li>Adjustable Strap: The adjustable black belt is suitable for your head circumference. Comes with soft eye socket and nose pad, one size fits all safety googles for men and women.</li>
+                            <li>Soft Edge Design: Made with a soft, flexible PVC body to ensure proper fit and comfort. The wraparound side shield construction provides a perfect fit and seal.</li>
                         </ul>
                     </div>
                 </p>
