--- a/storefront-site/html/products/product9.html
+++ b/storefront-site/html/products/product9.html
@@ -69,17 +69,17 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$18.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;">$9.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
                     <div>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Medical Grade Isopropyl Alcohol</li>
+                            <li>First aid to help prevent risk of infection from minor cuts, scrapes and burns</li>
+                            <li>No heavy metals or harmful organics</li>
+                            <li>Used in the production of sanitizers</li>
+                            <li>Less than 0.001 g/100 mL non-volatile residues</li>
                         </ul>
                     </div>
                 </p>
