Add product on sale

--- a/storefront-site/html/products/product12.html
+++ b/storefront-site/html/products/product12.html
@@ -69,7 +69,7 @@
                         <option value="4">4</option>
                         <option value="5">5</option>
                     </select>
-                    <p class="price">Price: <span style="color: #b12704;">$3.99</span></p>
+                    <p class="price">Price: <span style="color: #b12704;"><s>$3.99</s> $1.99</span></p>
                     About this item:
                 </h3>
                 <p class="description">
