--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -69,14 +69,14 @@
     <br>
     <br>
 
-    <div class = "confirmation-outer-container">
-        <h1><b><center>Thank you for your purchase!!</center></b></h1>
-        <h4><b><center>Estimated Delivery in 2 weeks!! </center></b></h4>
+    <div class="confirmation-outer-container">
+        <h1><b><center>Thank you for your purchase!</center></b></h1>
+        <h4><b><center>Estimated delivery is in 2 weeks.</center></b></h4>
         <a href="../index.html"><center>Back to the Store</center></a>
-
+    </div>
 
     <div class="outer-grid-product-listings">
-        <h2>Recommended Products</h2>
+        <h2>Recommended Products For You</h2>
         <div class="inner-grid-product-listings">
             <a href="./products/product4.html">
                 <div class="product-listing">
