--- a/storefront-site/html/products/product1.html
+++ b/storefront-site/html/products/product1.html
@@ -75,8 +75,8 @@
                 <p class="description">
                     <div>
                         <ul>
-                            <li>Suitable for Offices, Schools, Outdoors.</li>
-                            <li>It is made of 3 ply layers and premium non woven fabric, blocking and filtering small particles in the air.</li>
+                            <li>Suitable for offices, schools, and outdoors.</li>
+                            <li>Made of 3 ply layers and premium non woven fabric, blocking and filtering small particles in the air.</li>
                             <li>This face mask is designed with an adjustable elastic ear loop.</li>
                             <li>Breathable, soft and comfortable, gentle to skin.</li>
                             <li>Disposable masks: 50pc face masks.</li>
