--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -72,7 +72,7 @@
                         <img src="./images/product12.png" alt="On Sale Product">
                     </div>
                 </a>
-                <span><a href="./html/sales.html">View Other Sales</a></span>
+                <span><a href="./html/sales.html">View Sale</a></span>
             </div>
         </div>
         <div class="featured-product-container">
@@ -94,7 +94,7 @@
                         <img src="./images/product16.png" alt="Under $20 Product">
                     </div>
                 </a>
-                <span><a href="./html/products/product8.html">Shop Under $20</a></span>
+                <span><a href="./html/products/product16.html">Shop Under $20</a></span>
             </div>
         </div>
     </div>
