--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -72,7 +72,7 @@
     <div class="confirmation-outer-container">
         <h1><b><center>Thank you for your purchase!</center></b></h1>
         <h4><b><center>Estimated delivery is in 2 weeks.</center></b></h4>
-        <a href="../index.html"><center>Back to the Store</center></a>
+        <a href="../index.html"><center>Back to Homepage</center></a>
     </div>
 
     <div class="outer-grid-product-listings">
