--- a/storefront-site/html/locations.html
+++ b/storefront-site/html/locations.html
@@ -63,7 +63,7 @@
             <div>
                 <h1>Locations and Hours</h1>
 
-                <p>Last Updated: March 27, 2021</p>
+                
                 <br>
 
                 
@@ -102,7 +102,7 @@
             </div>
         </main>
     </div>
-
+    <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
