--- a/storefront-site/html/shipping.html
+++ b/storefront-site/html/shipping.html
@@ -60,9 +60,9 @@
         </div>
         <main class="shipping">
             <div>
-                <h1>FREE SHIPPING</h1>
+                <h1>Shipping</h1>
 
-                <p>Last Updated: March 27, 2021</p>
+                
                 <br>
 
                 <p>For all orders over $50 or more please enjoy complimentary free shipping for domestic orders.</p>
@@ -78,7 +78,7 @@
             </div>
         </main>
     </div>
-
+    <hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
