--- a/storefront-site/html/locations.html
+++ b/storefront-site/html/locations.html
@@ -71,33 +71,39 @@
                   <tr><th>San Francisco</th>
                   <tr><th>720 Market St</th>  
                     <br>
+                  <tr><th>Saturday</th><td>Closed</td></tr>
                   <tr><th>Sunday</th><td>Closed</td></tr>
                   <tr><th>Monday</th><td>9am - 5pm</td></tr>
                   <tr><th>Tuesday</th><td>9am - 5pm</td></tr>
                   <tr><th>Wednesday</th><td>9am - 5pm</td></tr>
                   <tr><th>Thursday</th><td>9am - 5pm</td></tr>
+                  <tr><th>Friday</th><td>9am- 5pm</td></tr>
                   </table>
 
                   <table>
                   <tr><th>San Jose</th>
                   <tr><th>4220 Sharks Ave</th>  
                     <br>
+                  <tr><th>Saturday</th><td>Closed</td></tr>
                   <tr><th>Sunday</th><td>Closed</td></tr>
                   <tr><th>Monday</th><td>9am - 5pm</td></tr>
                   <tr><th>Tuesday</th><td>9am - 5pm</td></tr>
                   <tr><th>Wednesday</th><td>9am - 5pm</td></tr>
                   <tr><th>Thursday</th><td>9am - 5pm</td></tr>
+                  <tr><th>Friday</th><td>9am- 5pm</td></tr>
                   </table>  
                   
                   <table>
                   <tr><th>Oakland</th>
                   <tr><th>1 Warriors Way</th> 
                     <br> 
+                  <tr><th>Saturday</th><td>Closed</td></tr>
                   <tr><th>Sunday</th><td>Closed</td></tr>
                   <tr><th>Monday</th><td>9am - 5pm</td></tr>
                   <tr><th>Tuesday</th><td>9am - 5pm</td></tr>
                   <tr><th>Wednesday</th><td>9am - 5pm</td></tr>
                   <tr><th>Thursday</th><td>9am - 5pm</td></tr>
+                  <tr><th>Friday</th><td>9am- 5pm</td></tr>
                   </table>
             </div>
         </main>
