--- a/storefront-site/html/returns.html
+++ b/storefront-site/html/returns.html
@@ -49,15 +49,17 @@
     <!-- END HEADER -->
 
     <div class="grid-container">
-        <div class="sidebar">
-            <nav class="sidebar-nav">
-                <span style="font-size: 1.2em;">Returns</span>
-                <hr>
-                <span style="font-size: 1.2em;">Shipping</span>
-                <hr>
-                <span style="font-size: 1.2em;">Locations and Hours</span>
-            </nav>
-        </div>
+        
+            <div class="sidebar">
+                <nav class="sidebar-nav">
+                    <span style="font-size: 1.2em;" href="./returns.html">Returns</span>
+                    <hr>
+                    <span style="font-size: 1.2em;" href="./shipping.html">Shipping</span>
+                    <hr>
+                    <span style="font-size: 1.2em;" href="./locations.html">Locations and Hours</span>
+                </nav>
+            </div>
+        
         <main class="returns">
             <div>
                 <h1>Return Policy</h1>
