--- a/storefront-site/html/locations.html
+++ b/storefront-site/html/locations.html
@@ -51,12 +51,11 @@
     <div class="grid-container">
         <div class="sidebar">
             <nav class="sidebar-nav">
-                <span style="font-size: 1.2em;">Returns</span>
+                <span style="font-size: 1.2em;" href="./returns.html">Returns</span>
                 <hr>
-                <span style="font-size: 1.2em;">Shipping</span>
+                <span style="font-size: 1.2em;" href="./shipping.html">Shipping</span>
                 <hr>
-                <span style="font-size: 1.2em;">Locations and Hours</span>
-                
+                <span style="font-size: 1.2em;" href="./locations.html">Locations and Hours</span>
             </nav>
         </div>
         <main class="locations">
