--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -72,7 +72,7 @@
                         <img src="./images/product12.png" alt="On Sale Product">
                     </div>
                 </a>
-                <span><a href="./html/sales.html">View Sale</a></span>
+                <span><a href="./html/products/product12.html">View Sale</a></span>
             </div>
         </div>
         <div class="featured-product-container">
@@ -190,7 +190,7 @@
             <nav class="footer-nav">
                 <b class="footer-nav-header">Information</b>
                 <a class="footer-nav-content" href="./html/aboutus.html">About Us</a>
-                <a class="footer-nav-content" href="./html/aboutus.html">Locations & Hours</a>
+                <a class="footer-nav-content" href="./html/locations.html">Locations & Hours</a>
                 <a class="footer-nav-content" href="./html/tos.html">Terms of Service</a>
                 <a class="footer-nav-content" href="./html/privacy-policy.html">Privacy Policy</a>
             </nav>
@@ -209,8 +209,8 @@
             </nav>
             <nav class="footer-nav">
                 <b class="footer-nav-header">Newsletter</b>
-                <a class="footer-nav-content" href="./html/faq.html">Subscribe</a>
-                <a class="footer-nav-content" href="./html/faq.html">Unsubscribe</a>
+                <a class="footer-nav-content" href="./html/user-preferences-change-email-subscription.html">Subscribe</a>
+                <a class="footer-nav-content" href="./html/user-preferences-change-email-subscription.html">Unsubscribe</a>
             </nav>
         </div>
         <hr>
