--- a/storefront-site/html/shipping.html
+++ b/storefront-site/html/shipping.html
@@ -15,47 +15,49 @@
 
 <body>
     <!-- BEGIN HEADER -->
-    <header>
-        <div class="logo-container">
-            <a href="../index.html">
-                <img src="../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
-            </a>
-        </div>
-        <form class="search-form">
-            <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
-        </form>
-        <nav class="header-nav">
-            <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
-            <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
-                Preferences</a>
-            <div class="header-login-dropdown">
-                <a href="./login.html" class="header-nav-link">Sign In ▼</a>
-                <nav class="header-login-dropdown-content">
-                    <div>
-                        <div class="header-login-dropdown-flex">
-                            <a href="./login.html">Sign In <span class="material-icons"
-                                    style="font-size: 16px;">login</span></a>
-                            <a href="./register.html">Register <span class="material-icons"
-                                    style="font-size: 16px;">person_add</span></a>
-                            <a href="../index.html">Log Out <span class="material-icons"
-                                    style="font-size: 16px;">logout</span></a>
-                        </div>
+ <header>
+    <div class="logo-container">
+        <a href="../index.html">
+            <img src="../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
+        </a>
+    </div>
+    <form class="search-form">
+        <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
+    </form>
+    <nav class="header-nav">
+        <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+        <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+            Preferences</a>
+        <div class="header-login-dropdown">
+            <a href="./login.html" class="header-nav-link">Sign In ▼</a>
+            <nav class="header-login-dropdown-content">
+                <div>
+                    <div class="header-login-dropdown-flex">
+                        <a href="./login.html">Sign In <span class="material-icons"
+                                style="font-size: 16px;">login</span></a>
+                        <a href="./register.html">Register <span class="material-icons"
+                                style="font-size: 16px;">person_add</span></a>
+                        <a href="../index.html">Log Out <span class="material-icons"
+                                style="font-size: 16px;">logout</span></a>
                     </div>
-                </nav>
-            </div>
-        </nav>
-    </header>
-    
-    <!-- END HEADER -->
+                </div>
+            </nav>
+        </div>
+    </nav>
+</header>
+<hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+<!-- END HEADER -->
 
     <div class="grid-container">
         <div class="sidebar">
             <nav class="sidebar-nav">
-                <span style="font-size: 1.2em;" href="./returns.html">Returns</span>
+                <span style="font-size: 1.2em;">Help</span>
                 <hr>
-                <span style="font-size: 1.2em;" href="./shipping.html">Shipping</span>
+                <a href="./returns.html">Returns</a>
                 <hr>
-                <span style="font-size: 1.2em;" href="./locations.html">Locations and Hours</span>
+                <a  href="./shipping.html">Shipping</a>
+                <hr>
+                <a  href="./locations.html">Locations and Hours</a>
             </nav>
         </div>
         <main class="shipping">
@@ -80,7 +82,7 @@
             </div>
         </main>
     </div>
-    <hr style="margin: 10; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+    <hr style="margin: 10; padding: 0; border: 0; height: 24px;">
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
