--- a/storefront-site/html/locations.html
+++ b/storefront-site/html/locations.html
@@ -113,7 +113,7 @@
             </div>
         </main>
     </div>
-    <hr style="margin: 10; padding: 0; border: 0; height: 24px>
+    <hr style="margin: 10; padding: 0; border: 0; height: 24px;">
     <!-- BEGIN FOOTER -->
     <footer>
         <div class="footer-nav-container">
