--- a/storefront-site/html/returns.html
+++ b/storefront-site/html/returns.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/privacy-policy.css">
     <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/locations.css">
+    <link rel="stylesheet" href="../styles/returns.css">
 </head>
 
 <body>
