Update sidebar nav

--- a/storefront-site/html/returns.html
+++ b/storefront-site/html/returns.html
@@ -54,11 +54,20 @@
             <nav class="sidebar-nav">
                 <span style="font-size: 1.2em;">Help</span>
                 <hr>
-                <a href="./returns.html">Returns</a>
-                <hr>
-                <a  href="./shipping.html">Shipping</a>
-                <hr>
-                <a  href="./locations.html">Locations and Hours</a>
+                <ul>
+                    <li>
+                        <a href="./faq.html">FAQ</a>
+                    </li>
+                    <li>
+                        <b>Returns</b>
+                    </li>
+                    <li>
+                        <a href="./shipping.html">Shipping</a>
+                    </li>
+                    <li>
+                        <a href="./locations.html">Locations and Hours</a>
+                    </li>
+                </ul>
             </nav>
         </div>
         <main class="returns">
