--- a/storefront-site/html/faq.html
+++ b/storefront-site/html/faq.html
@@ -6,104 +6,107 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ</title>
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/google-material-icons.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/faq.css">
+    <link rel="stylesheet" href="../styles/footer.css">
 </head>
-
-<body topmargin="20">
-    <table>
-        <tr>
-            <th><a href="../index.html"><img src="../images/gray-circle.png" width="48"></a></th>
-            <th nowrap>Pandemic Essentials</th>
-            <th width="100%"></th>
-            <th nowrap><a href="./cart.html">🛒 Cart</a></th>
-            <th><a href="./login.html">Login</a></th>
-            <th><a href="./user-preferences.html">Preferences</a></th>
-        </tr>
-    </table>
-   <table>
-       <tr>
-           <th><img src="../images/faq.png" width="100%"></th>
-       </tr>
-       <tr>
-        <th align="left"><h1>FAQ</h1></th>
-        </tr>
-        <tr>
-            <th align="left"><h2>Question 1</h1></th>
-        </tr>
-        <tr>
-        <td align="left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!</p></td>
-        </tr>        <tr>
-        <th align="left"><h2>Question 2</h1></th>
-        </tr>
-        <tr>
-        <td align="left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!</p></td>
-        </tr>
-        <tr>
-            <th align="left"><h2>Question 3</h1></th>
-        </tr>
-        <tr>
-        <td align="left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!</p></td>
-        </tr>
-        <tr>
-        <th align="left"><h2>Question 4</h1></th>
-        </tr>
-        <tr>
-        <td align="left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!</p></td>
-        </tr>
-        <tr>
-            <th align="left"><h2>Question 5</h1></th>
-        </tr>
-        <tr>
-        <td align="left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!</p></td>
-        </tr>
-        <tr>
-            <th align="left"><h2>Question 6</h1></th>
-        </tr>
-        <tr>
-        <td align="left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                optio, eaque rerum!Provident similique accusantium nemo autem. Veritatis
-                obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                nihil, eveniet aliquid culpa officia aut!</p></td>
-        </tr>
-
-   </table> 
-    <footer>
-        <table>
-            <tr>
-                <td><a href="./aboutus.html">About us</a></td>
-                <td><a href="./faq.html">FAQ's</a></td>
-            </tr>
-            <tr>
-                <td width="100%" align="center"> &copy; 2021 Copyright Codeninjas</td>
-            </tr>
-        </table>
-    </footer>
+ <!-- BEGIN HEADER -->
+ <header>
+    <div class="logo-container">
+        <a href="../index.html">
+            <img src="../images/logo-transparent.png" class="logo" alt="Pandemic Essentials Logo">
+        </a>
+    </div>
+    <form class="search-form">
+        <input type="search" class="search-field" autocomplete="off" placeholder="Search...">
+    </form>
+    <nav class="header-nav">
+        <a href="./cart.html" class="header-nav-link"><span class="material-icons">shopping_cart</span> Cart</a>
+        <a href="./user-preferences.html" class="header-nav-link"><span class="material-icons">settings</span>
+            Preferences</a>
+        <div class="header-login-dropdown">
+            <a href="./login.html" class="header-nav-link">Sign In ▼</a>
+            <nav class="header-login-dropdown-content">
+                <div>
+                    <div class="header-login-dropdown-flex">
+                        <a href="./login.html">Sign In <span class="material-icons"
+                                style="font-size: 16px;">login</span></a>
+                        <a href="./register.html">Register <span class="material-icons"
+                                style="font-size: 16px;">person_add</span></a>
+                        <a href="../index.html">Log Out <span class="material-icons"
+                                style="font-size: 16px;">logout</span></a>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </nav>
+</header>
+<hr style="margin: 0; padding: 0; border: 0; height: 24px; box-shadow: inset 0 24px 24px -24px rgba(0, 0, 0, 0.5);">
+<!-- END HEADER -->
+<body>
+    <body>  
+        <div class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <h3>1) How are returns handled?</h3>
+        <p>Returns
+            You have 30 days to return an unopen and unused item from the date you received it. It must be in the original packaging with the receipt.
+            
+            You are responsible fo the cost of shipping. All shipping costs are non refundable.
+            
+            Refunds
+            We will notify you upon receiving the order. If approved, you will receive credit.
+        </p>
+        <h3>2) How to contact us?</h3>
+        <p>You can reach out to us via phone +1 (555)123-4567 or emails us at pandemic-essentials@example.com</p>
+        <h3>3) How to reset the password?</h3>
+        <p>You can reset your password by clicking on the need help button on the login page!</p>
+        <h3>4) How can I check my order status?</h3>
+        <p>Upon order confirmation you will get an email with the tracking code you can also set up text notifications to check your order status!</p>
+        <h3>5) How are international orders handled?</h3>
+        <p>International orders make take 7-10 additional days for delivery and an extra delivery charge!</p>
+        <h3>6) My order is defected, how do I get a replacement?</h3>
+        <p>We offer a 100% satisfaction, if there is an issue with an order simply give us a call or email us to get the defected product replaced.</p>
+    </div>
+   <!-- BEGIN FOOTER -->
+   <footer>
+    <div class="footer-nav-container">
+        <nav class="footer-nav">
+            <b class="footer-nav-header">Information</b>
+            <a class="footer-nav-content" href="./aboutus.html">About Us</a>
+            <a class="footer-nav-content" href="./locations.html">Locations & Hours</a>
+            <a class="footer-nav-content" href="./tos.html">Terms of Service</a>
+            <a class="footer-nav-content" href="./privacy-policy.html">Privacy Policy</a>
+        </nav>
+        <nav class="footer-nav">
+            <b class="footer-nav-header">Services</b>
+            <a class="footer-nav-content" href="./faq.html">FAQ</a>
+            <a class="footer-nav-content" href="./returns.html">Returns</a>
+            <a class="footer-nav-content" href="./shipping.html">Shipping</a>
+        </nav>
+        <nav class="footer-nav">
+            <b class="footer-nav-header">Contact Us</b>
+            <span class="footer-nav-content">By Phone (Mon-Fri 9am-5pm):</span>
+            <span class="footer-nav-content"><a href="tel:+1555-123-4567">+1 (555) 123-4567</a></span>
+            <span class="footer-nav-content">By Email:</span>
+            <span class="footer-nav-content"><a
+                    href="mailto:pandemic-essentials@example.com">pandemic-essentials@example.com</a></span>
+        </nav>
+        <nav class="footer-nav">
+            <b class="footer-nav-header">Newsletter</b>
+            <a class="footer-nav-content" href="./user-preferences-change-email-subscription.html">Subscribe</a>
+            <a class="footer-nav-content" href="./user-preferences-change-email-subscription.html">Unsubscribe</a>
+        </nav>
+    </div>
+    <hr>
+    <nav class="footer-logo-container">
+        <a href="../index.html">
+            <img src="../images/logo-transparent.png" class="logo">
+        </a>
+    </nav>
+</footer>
+<!-- END FOOTER -->
 </body>
 
 </html>
